--- a/jr-pricing-discount/src/test/resources/application-test.yaml
+++ b/jr-pricing-discount/src/test/resources/application-test.yaml
@@ -12,6 +12,5 @@ spring:
 logging:
   level:
     root: DEBUG
-jr-fare-app-conf:
+jr-discount-app-conf:
   catalogBaseUrl: "http://catalog:9200"
-  discountBaseUrl: "http://discount:9200"
